# edge-video-pipeline

./: .gitignore  03_Cpp实时视频流推理Pipeline.md  CMakeLists.txt  LICENSE  README.md  rdk.txt
configs/boards/: jetson_8gb.yaml  rdk_x5_8gb.yaml  rk3588_8gb.yaml
configs/models/: yolo11n.yaml  yolo11n_conf005.yaml  yolo11n_conf010.yaml
configs/pipeline/: jetson_tensorrt_bdd100k_quality.yaml  jetson_tensorrt_fixed_input_alignment.yaml  jetson_tensorrt_pipeline.yaml  jetson_tensorrt_pipeline_noreuse.yaml  jetson_tensorrt_single_thread.yaml  rdk_x5_bpu_bdd100k_quality.yaml  rdk_x5_bpu_fixed_input_alignment.yaml  rdk_x5_bpu_pipeline.yaml  rdk_x5_bpu_single_thread.yaml  rk3588_rknn_bdd100k_quality.yaml  rk3588_rknn_pipeline.yaml  rk3588_rknn_pipeline_noreuse.yaml
configs/streams/: bdd100k_mot_mini_v1.yaml  video_fixed_v1.yaml
reports/: failure_and_fallback.md  input_sources.md  runbook.md  runtime_benchmark.md  stability_report.md  troubleshooting.md  video_pipeline.md
scripts/: README.md  inject_failure_tests.py
scripts/benchmark/: aggregate_failure_service.py  aggregate_pipeline_benchmark.py  aggregate_runtime_benchmark.py  aggregate_stability.py  check_pipeline_trace.py  compare_jetson_bufferreuse_ab.py  compare_rk3588_bufferreuse_ab.py  compare_rk3588_core_ab.py  compare_rk3588_parallel_ab.py  raw_scope.py  validate_pipeline_raw_schema.py
scripts/monitor/: analyze_stability.py  monitor_jetson_tegrastats.sh  monitor_rdk_x5_bpu.sh  monitor_rk3588_rknpu.sh
scripts/probe/: probe_openni2_astra.py
scripts/quality/: analyze_bdd100k_difficult_cases.py  analyze_bdd100k_focus_gap.py  check_prepost_consistency.py  compare_detection_alignment.py  convert_project1_alignment_to_video_raw.py  convert_project2_alignment_to_video_raw.py  detect_mov_orientation.py  evaluate_bdd100k_mot_detection.py  extract_video_alignment_frames.py  prepare_bdd100k_mot_mini.py  run_rk3588_coco_recheck.sh  summarize_rk3588_coco_recheck.py  sweep_bdd100k_confidence.py
scripts/run/: rdk_x5_srcampy_stream.py  run_jetson_bdd100k_mini.sh  run_jetson_fixed_input_alignment.sh  run_jetson_tensorrt_8h_mixed.sh  run_jetson_tensorrt_bufferreuse_ab.sh  run_jetson_tensorrt_imx219_disconnect.sh  run_jetson_tensorrt_pipeline.sh  run_jetson_tensorrt_stability.sh  run_rdk_x5_bdd100k_mini.sh  run_rdk_x5_bpu_pipeline.sh  run_rdk_x5_bpu_stability.sh  run_rdk_x5_failure_injection.sh  run_rdk_x5_fixed_input_alignment.sh  run_rdk_x5_input_disconnect.sh  run_rk3588_bdd100k_mini.sh  run_rk3588_camera_disconnect.sh  run_rk3588_failure_injection.sh  run_rk3588_rknn_8h_mixed.sh  run_rk3588_rknn_bufferreuse_ab.sh  run_rk3588_rknn_core_ab.sh  run_rk3588_rknn_parallel_ab.sh  run_rk3588_rknn_pipeline.sh  run_rk3588_rknn_stability.sh
scripts/service/: test_jetson_systemd_service.sh  test_rdk_x5_systemd_service.sh  test_rk3588_systemd_service.sh
scripts/service/systemd/: edge-video-pipeline-jetson.service  edge-video-pipeline-rdkx5.service  edge-video-pipeline-rk3588-camera.service  edge-video-pipeline-rk3588.service
specs/: 00_environment_baseline_template.md  00_run_record_template.md  03A_单线程最小Demo规范.md  03B_多线程Pipeline规范.md  03C_队列限流与Buffer复用规范.md  03D_Jetson_TensorRT_CppPipeline规范.md  03E_RK3588_RKNN_CppPipeline规范.md  03F_RDK_X5_BPU_CppPipeline规范.md  03G_异常恢复与服务化部署规范.md  03H_稳定性监控规范.md  03I_统一RuntimeBenchmark与报告规范.md
src/: video_pipeline_app.cpp
src/inference/tensorrt/: README.md
